--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 #add_executable( xyTableMain xyTableMain.cpp Motorcontrol.cpp RS232communication.hpp Spectrometer.cpp)
-add_executable(SpectrometerMain SpectrometerMain.cpp Spectrometer.cpp)
+add_executable(SpectrometerMain SpectrometerMain.cpp Spectrometer.cpp SpecMeasurement.cpp)
 target_link_libraries( SpectrometerMain ${Boost_LIBRARIES})
 #target_link_libraries( xyTableMain ${LIBRARIES})
 
